Tarea 2 Unidad 1 informacion personal de Yoonatan Bustos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
                     tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos e
                     sql server y crud.
                     por otro lado he manejado frameworks como angular y boostrap</p>
-                    <img src="">
+                <img src="">
+            </div>
+
+            <div class="col-3 p-2">
+                <h3>Yonnatan Bustos</h3>
+                <p>Tengo 25 años, soy estudiante de Ingeniería de Sistemas y Computación de la Universidad del Quindío.
+                    Tengo conocimiento en lenguajes de programación como Java, Python, Kotlin, JavaScript. En base de
+                    datos SQL, PostgreSQL y adicional tengo conocimiento en Angular.
+                </p>
+                <a href="https://github.com/yonnatanbustos1">Perfil GitHub</a>
             </div>
 
             <div class="col-3 p-2">
@@ -51,16 +60,7 @@
 
             </div>
 
-            <div class="col-3 p-2">
-                <h3>Camila Mejia</h3>
-                <p>Hola, tengo 19 años y soy una estudiante de diseño y desarrollo web del tecnologico de antioquia.
-                    tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos e
-                    sql server y crud.
-                    por otro lado he manejado frameworks como angular y boostrap</p>
 
-            </div>
-
-            
         </div>
 
 
