--- a/index.html
+++ b/index.html
@@ -34,20 +34,16 @@
             </div>
 
             <div class="col-3 p-2">
-                <h3>Camila Mejia</h3>
-                <p>Hola, tengo 19 años y soy una estudiante de diseño y desarrollo web del tecnologico de antioquia.
-                    tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos e
-                    sql server y crud.
-                    por otro lado he manejado frameworks como angular y boostrap</p>
+                <h3></h3>
+                <p>
+                    </p>
 
             </div>
 
             <div class="col-3 p-2">
-                <h3>Camila Mejia</h3>
-                <p>Hola, tengo 19 años y soy una estudiante de diseño y desarrollo web del tecnologico de antioquia.
-                    tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos e
-                    sql server y crud.
-                    por otro lado he manejado frameworks como angular y boostrap</p>
+                <h3>cesar enciso</h3>
+                <p>Actualmente me encuentro estudiando Tecnología en Desarrollo software, trabajo en una empresa que brinda soluciones tecnológicas a otras empresas y soy el encargado de todo el tema de soporte técnico en sistemas.
+                    Tengo conocimientos básicos en programación, (Html, javascript, css, wordpress, y bases de datos</p>
 
             </div>
 
