--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             </div>
 
             <div class="col-3 p-2">
-                <h3>Cesar Enciso</h3>
-                <p>Actualmente me encuentro estudiando Tecnología en Desarrollo software, trabajo en una empresa que brinda soluciones tecnológicas a otras empresas y soy el encargado de todo el tema de soporte técnico en sistemas.
-                Tengo conocimientos básicos en programación, (Html, javascript, css, wordpress, y bases de datos
-                </p>
+                <h3></h3>
+                <p>
+                    </p>
 
             </div>
 
             <div class="col-3 p-2">
-                <h3></h3>
-                <p></p>
+                <h3>cesar enciso</h3>
+                <p>Actualmente me encuentro estudiando Tecnología en Desarrollo software, trabajo en una empresa que brinda soluciones tecnológicas a otras empresas y soy el encargado de todo el tema de soporte técnico en sistemas.
+                    Tengo conocimientos básicos en programación, (Html, javascript, css, wordpress, y bases de datos</p>
 
             </div>
 
