Cambios de Andrés Espitia

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 
             </div>
 
-            <div class="col-3 p-2">
-                <h3></h3>
-                <p></p>
-
+           <div class="col-3 p-2">
+                <h3>Andres Espitia</h3>
+                <p> Soy ingeniero Informático y actualmente estoy residiendo y trabajando en el país de Australia como Ingeniero de soporte, lo cual he desarrollado por los últimos 5 años, así mismo estoy estudiando un “Advance Diploma in IT”.
+                    </p>
+                    <a href="https://github.com/Kr0no5Col">Perfil GitHub</a>
             </div>
 
 
