--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="col-3 p-2">
                 <h3>Camila Mejia</h3>
                 <p>Hola, tengo 19 años y soy una estudiante de diseño y desarrollo web del tecnologico de antioquia.
-                    tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos e
-                    sql server y crud.
-                    por otro lado he manejado frameworks como angular y boostrap</p>
+                    tengo conocimientos en lenguajes como Java, JavaScript y python. conocimiento de bases de datos en
+                    sql server. por otro lado he manejado frameworks como Angular y Boostrap</p>
+                    perfil de GitHub: <a href="https://github.com/CamilaMejiaP" ></a>  
                 <img src="">
             </div>
 
@@ -50,10 +50,11 @@
 
             </div>
 
-            <div class="col-3 p-2">
-                <h3></h3>
-                <p></p>
-
+           <div class="col-3 p-2">
+                <h3>Andres Espitia</h3>
+                <p> Soy ingeniero Informático y actualmente estoy residiendo y trabajando en el país de Australia como Ingeniero de soporte, lo cual he desarrollado por los últimos 5 años, así mismo estoy estudiando un “Advance Diploma in IT”.
+                    </p>
+                    <a href="https://github.com/Kr0no5Col">Perfil GitHub</a>
             </div>
 
 
